--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "firebase-tools": "^9.14.0",
     "formik": "^2.2.9",
     "mdbreact": "^5.0.2",
     "node-sass": "^6.0.1",
