--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-export-excel": "^0.5.3",
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -31,6 +32,7 @@
     "workbox-routing": "^5.1.3",
     "workbox-strategies": "^5.1.3",
     "workbox-streams": "^5.1.3",
+    "xlsx": "^0.17.0",
     "yup": "^0.32.9"
   },
   "peerDependencies": {
