--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "firebase": "^8.7.0",
     "firebase-tools": "^9.14.0",
     "formik": "^2.2.9",
+    "html2canvas": "^1.2.2",
+    "jspdf": "^2.3.1",
     "mdbreact": "^5.0.2",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
